# freesdn-agent

./: .gitignore  AGENT.md  DEPLOYMENT.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  requirements-dev.txt  requirements-release.txt  requirements.txt  run.py
.github/workflows/: agent-release.yml
packaging/: daemon.spec  desktop.spec
packaging/installers/: build_deb.sh  build_msi.ps1  build_pkg.sh
packaging/installers/wix/: product.wxs
packaging/signing/: sign.py
src/freesdn_agent/: __init__.py  __main__.py  main.py
src/freesdn_agent/api/: __init__.py  client.py  ws_client.py
src/freesdn_agent/core/: __init__.py  config.py  constants.py  credentials.py  exceptions.py
src/freesdn_agent/daemon/: __init__.py  cli.py  main.py  service.py
src/freesdn_agent/desktop/: __init__.py  crash_handler.py  single_instance.py  tray.py
src/freesdn_agent/listeners/: __init__.py  base.py  cdp.py  dhcp_watcher.py  lldp.py  snmp_trap.py  syslog.py
src/freesdn_agent/scanners/: __init__.py  arp.py  banner.py  base.py  dns.py  http_service.py  lldp_capture.py  mdns.py  netbios.py  onvif.py  ping.py  rtsp.py  sadp.py  sip.py  snmp.py  ssdp.py  tcp_port.py
src/freesdn_agent/services/: __init__.py  async_scan_manager.py  capabilities.py  device_cache.py  heartbeat.py  oui_lookup.py  rollback.py  scan_manager.py  scheduler.py  task_executor.py  updater.py
src/freesdn_agent/ui/: __init__.py  main_window.py
src/freesdn_agent/ui/dialogs/: __init__.py  about.py  adopt.py  settings.py
src/freesdn_agent/ui/styles/: __init__.py  icons.py  theme.py
src/freesdn_agent/ui/widgets/: __init__.py  connection_panel.py  discovery_panel.py  inventory_data.py  inventory_panel.py  managed_devices_panel.py  multi_target_selector.py  network_selector.py  progress_widget.py  results_table.py  scan_panel.py  status_bar.py
src/freesdn_agent/utils/: __init__.py  logging.py  platform.py  privileges.py
tests/: __init__.py  conftest.py  test_capabilities_interfaces.py  test_desktop.py  test_inventory_panel.py  test_listeners.py  test_scanners.py  test_services.py  test_updater_signing.py  test_ws_client_integration.py  test_ws_concurrent_dispatch.py
